--- a/obl/package.json
+++ b/obl/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "chart.js": "^4.4.3",
+    "chartjs": "^0.3.24",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
