--- a/obl/package.json
+++ b/obl/package.json
@@ -23,6 +23,7 @@
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-loading-indicators": "^1.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5"
